--- a/src/style/element-ui.styl
+++ b/src/style/element-ui.styl
@@ -40,7 +40,6 @@ input
     placeholderStyle()
   }
 }
-
 /deep/ .el-form-item.is-success .el-input__validateIcon {
   color #FFFFFF
 }
@@ -77,6 +76,7 @@ checkbox
 /deep/ .el-checkbox__label {
   font-size 0.8rem
   color #FFFFFF
+  line-height 0.8rem
 }
 
 /deep/ .el-checkbox__input.is-checked + .el-checkbox__label {
