--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -27,6 +27,13 @@
   }
 }
 
+.submitButton {
+  width: 72vw;
+  display flex
+  align-items center
+  justify-content center
+}
+
 #captcha {
   width: 72vw;
   display: inline-block;
@@ -41,7 +48,8 @@
   background: #FFFFFF;
   border-radius: 6px;
 }
-.popup{
+
+.popup {
   width 100%
   height 100%
   background #FFFFFF
