1、忘记密码，修改密码页面添加

--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -1,3 +1,14 @@
+.content div {
+  word-wrap: break-word;
+  .title {
+    padding-top: 5vh;
+    font-size: 1.6rem;
+    color: #FFFFFF;
+    margin-left: 14vw;
+    text-align: left;
+  }
+}
+
 .form {
   margin: 4vh 0 2vh;
 }
@@ -28,18 +39,6 @@
 }
 
 .submitButton {
-  width: 72vw;
-  display flex
-  align-items center
-  justify-content center
-}
-
-#captcha {
-  width: 72vw;
-  display: inline-block;
-}
-
-.submitButton {
   margin-top: 1vh;
   font-size: 0.85rem;
   color: #00A6AE;
@@ -47,10 +46,28 @@
   width: 72vw;
   background: #FFFFFF;
   border-radius: 6px;
+  display flex
+  align-items center
+  justify-content center
 }
 
-.popup {
-  width 100%
-  height 100%
-  background #FFFFFF
+.goDiv {
+  display: flex;
+  margin: 0 14vw;
+  .empty {
+    flex: 1;
+  }
+  .goButton {
+    min-width: 1vw;
+    text-align: center;
+    font-size: 0.85rem;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    cursor: pointer;
+  }
+}
+
+#captcha {
+  width: 72vw;
+  display: inline-block;
 }
