--- a/src/style/var.styl
+++ b/src/style/var.styl
@@ -7,6 +7,7 @@ $body-background = #f4f4f4;
 $nav-item-height = 40px;
 $nav-item-color = rgba(0,0,0,.6);
 $nav-item-active = $color-primary;
+$primary-color = #8c0776;
 
 
 
