--- a/src/style/element-ui.styl
+++ b/src/style/element-ui.styl
@@ -109,7 +109,18 @@ button
 .el-button--primary.is-disabled:active,
 .el-button--primary.is-disabled:focus,
 .el-button--primary.is-disabled:hover {
-  color #c0c4cc
+  color #999
   background-color #ebeef5
   border-color #ebeef5
+}
+/*
+indicator
+*/
+.mint-indicator {
+  .mint-indicator-wrapper{
+    z-index 99999 !important
+  }
+  .mint-indicator-mask{
+    z-index 99998 !important
+  }
 }
