--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -1,13 +1,13 @@
 .content div {
   word-wrap: break-word;
-  .title {
+  &.title {
     padding-top: 5vh;
     font-size: 1.6rem;
     color: #FFFFFF;
     margin-left: 14vw;
     text-align: left;
   }
-  .subTitle {
+  &.subTitle {
     padding-top: 2.5vh;
     color: #FFFFFF;
     margin-left: 14vw;
@@ -104,6 +104,11 @@
 
 .popup {
   position: fixed;
+  z-index 100
+  width 100%
+  height 100%
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   background: #fff;
   top: 50%;
   left: 50%;
