1、交易首页修改

--- a/src/style/element-ui.styl
+++ b/src/style/element-ui.styl
@@ -108,9 +108,9 @@ button
 .el-button--primary.is-disabled:active,
 .el-button--primary.is-disabled:focus,
 .el-button--primary.is-disabled:hover {
-  color #999
-  background-color #ebeef5
-  border-color #ebeef5
+  color #FFFFFF
+  background-color #DDDDDD
+  border-color #DDDDDD
 }
 /*
 indicator
