--- a/src/style/animation.styl
+++ b/src/style/animation.styl
@@ -23,6 +23,13 @@
     opacity: 1;
   }
 }
+.fade-enter, .fade-leave-active {
+  opacity: 0;
+}
+.top-enter, .top-leave-active {
+  -webkit-transform: translate3d(0, -100%, 0);
+  transform: translate3d(0, -100%, 0);
+}
 .slide-top-enter, .slide-top-leave-active {
   -webkit-transform: translate3d(-50%, -100%, 0);
   transform: translate3d(-50%, -100%, 0);
@@ -38,7 +45,4 @@
 .slide-left-enter, .slide-left-leave-active {
   -webkit-transform: translate3d(-100%, -50%, 0);
   transform: translate3d(-100%, -50%, 0);
-}
-.fade-enter, .fade-leave-active {
-  opacity: 0;
 }
