--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -57,6 +57,13 @@
   display flex
   align-items center
   justify-content center
+  .imageLoading {
+    z-index 1
+    background-image: url($image-loading)
+    background-size: cover;
+    width 4.5vw
+    height 4.5vw
+  }
 }
 
 .goDiv {
