--- a/src/style/element-ui.styl
+++ b/src/style/element-ui.styl
@@ -117,9 +117,9 @@ indicator
 */
 .mint-indicator {
   .mint-indicator-wrapper{
-    z-index 99999 !important
+    z-index $zIndexMax !important
   }
   .mint-indicator-mask{
-    z-index 99998 !important
+    z-index ($zIndexMax - 1) !important
   }
 }
