--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -111,10 +111,11 @@
 
 .popup {
   position: fixed;
-  z-index 100
+  z-index $zIndexPopup
   width 100%
   height 100%
   overflow: scroll;
+  overflow-scrolling touch
   -webkit-overflow-scrolling: touch;
   background: #fff;
   top: 50%;
