1、交易首页的列表数据接口部分添加

--- a/src/style/var.styl
+++ b/src/style/var.styl
@@ -4,6 +4,7 @@ $headerHeight = 12vh;
 $footerHeight = 12vh;
 $currencyHeaderHeight = 8vh
 $navbarHeaderHeight = 5.5vh;
+$navbarHeaderTextHeight = 3.5vh;
 $tabbarFooterHeight = 8.5vh;
 $logo-height = 25px;
 $body-background = #f4f4f4;
