用户中心提交

--- a/src/style/var.styl
+++ b/src/style/var.styl
@@ -4,7 +4,9 @@ $headerHeight = 12vh;
 $footerHeight = 12vh;
 $currencyHeaderHeight = 8vh
 $navbarHeaderHeight = 5.5vh;
+$mintHeaderHeight = 6vh;
 $navbarHeaderTextHeight = 3.5vh;
+$mintContentPaddingWidth = 5vw;
 $tabbarFooterHeight = 8.5vh;
 $logo-height = 25px;
 $body-background = #f4f4f4;
