--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -4,3 +4,9 @@
   align-items center
   justify-content center
 }
+.mint-header {
+  background #FFFFFF
+  font-size: 1rem;
+  color: #333333;
+  text-align: center;
+}
