--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -1,12 +1,22 @@
-.mint-tab-item {
+/deep/ .mint-tab-item {
   display flex
   flex-direction column
   align-items center
   justify-content center
 }
-.mint-header {
+/deep/ .mint-header {
   background #FFFFFF
   font-size: 1rem;
   color: #333333;
   text-align: center;
+}
+/deep/ .mint-cell-text {
+  font-size 1rem
+  font-weight normal
+  color #333333
+}
+
+/deep/ .mint-cell-value {
+  font-size 0.85rem
+  color #999999
 }
