添加银行卡页面修改

--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -82,6 +82,22 @@
   }
 }
 
+/deep/ .mintSubmit {
+  display flex
+  align-items center
+  justify-content center
+  .mint-button {
+    width 72vw
+    color #FFFFFF
+    background-image: linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%);
+    box-shadow: 0 5px 5px 0 rgba(102,187,191,0.14);
+    border-radius: 2px;
+  }
+  .mint-button.is-disabled {
+    background: #C8D4E0;
+  }
+}
+
 #captcha {
   width: 72vw;
   display: inline-block;
