--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -4,12 +4,14 @@
   align-items center
   justify-content center
 }
+
 /deep/ .mint-header {
   background #FFFFFF
   font-size: 1rem;
   color: #333333;
   text-align: center;
 }
+
 /deep/ .mint-cell-text {
   font-size 1rem
   font-weight normal
@@ -19,4 +21,28 @@
 /deep/ .mint-cell-value {
   font-size 0.85rem
   color #999999
+}
+
+/deep/ .mint-field-core::-webkit-input-placeholder{
+  /* WebKit browsers */
+  color: #CCCCCC;
+  opacity 0.7
+}
+
+/deep/ .mint-field-core:-moz-placeholder{
+  /* WebKit browsers */
+  color: #CCCCCC;
+  opacity 0.7
+}
+
+/deep/ .mint-field-core::-moz-placeholder{
+  /* WebKit browsers */
+  color: #CCCCCC;
+  opacity 0.7
+}
+
+/deep/ .mint-field-core::-ms-input-placeholder{
+  /* WebKit browsers */
+  color: #CCCCCC;
+  opacity 0.7
 }
