收款方式列表页面添加

--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -50,3 +50,8 @@
   display flex
   align-items center
 }
+
+/deep/ .mint-radio-input:checked + .mint-radio-core {
+  background-image linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%)
+  border-image linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%)
+}
