修改密码页面添加

--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -23,29 +23,34 @@
   color #999999
 }
 
-/deep/ .mint-field-core::-webkit-input-placeholder{
+/deep/ .mint-field-core::-webkit-input-placeholder {
   /* WebKit browsers */
   color: #CCCCCC;
   opacity 0.7
 }
 
-/deep/ .mint-field-core:-moz-placeholder{
+/deep/ .mint-field-core:-moz-placeholder {
   /* WebKit browsers */
   color: #CCCCCC;
   opacity 0.7
 }
 
-/deep/ .mint-field-core::-moz-placeholder{
+/deep/ .mint-field-core::-moz-placeholder {
   /* WebKit browsers */
   color: #CCCCCC;
   opacity 0.7
 }
 
-/deep/ .mint-field-core::-ms-input-placeholder{
+/deep/ .mint-field-core::-ms-input-placeholder {
   /* WebKit browsers */
   color: #CCCCCC;
   opacity 0.7
 }
+
+/deep/ .mint-cell {
+  border-top: 1px solid #EEEEEE
+}
+
 /deep/ .mint-cell-swipe-button {
   display flex
   align-items center
