1、开启手机验证页面 2、手机验证选择国家页面

--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -49,6 +49,11 @@
 
 /deep/ .mint-cell {
   border-top: 1px solid #EEEEEE
+
+}
+
+/deep/ .mint-cell:last-child {
+  border-bottom: 1px solid #EEEEEE
 }
 
 /deep/ .mint-cell-swipe-button {
