--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -85,6 +85,9 @@
     background-image: linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%);
     box-shadow: 0 5px 5px 0 rgba(102,187,191,0.14);
     border-radius: 2px;
+    .mint-button-text {
+      font-size 1rem
+    }
   }
   .mint-button.is-disabled {
     background: #C8D4E0;
