1、资产提现确认，提现二次验证

--- a/src/style/var.styl
+++ b/src/style/var.styl
@@ -6,6 +6,7 @@ $currencyHeaderHeight = 8vh
 $navbarHeaderHeight = 5.5vh;
 $mintHeaderHeight = 6vh;
 $navbarHeaderTextHeight = 3.5vh;
+$subTitleHeaderHeight = 5vh;
 $mintContentPaddingWidth = 5vw;
 $tabbarFooterHeight = 8.5vh;
 $logo-height = 25px;
