--- a/src/style/var.styl
+++ b/src/style/var.styl
@@ -9,6 +9,7 @@ $navbarHeaderTextHeight = 3.5vh;
 $subTitleHeaderHeight = 5vh;
 $mintContentPaddingWidth = 5vw;
 $tabbarFooterHeight = 8.5vh;
+$chatFooterHeight = 8.5vh;
 $logo-height = 25px;
 $body-background = #f4f4f4;
 $nav-item-height = 40px;
