--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -66,3 +66,6 @@
   background-image linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%)
   border-image linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%)
 }
+/deep/ .mint-navbar .mint-tab-item.is-selected {
+  border 0
+}
