1、字体样式修改 2、bignumber位数计算问题

--- a/src/style/element-ui.styl
+++ b/src/style/element-ui.styl
@@ -1,6 +1,6 @@
 inputFocus = false
 placeholderStyle() {
-  font-family SFUIDisplay-Regular sans-serif
+  font-family SFUIDisplay-Regular, sans-serif
   font-weight lighter
   color #FFFFFF
   opacity 0.7
