--- a/src/style/reset.styl
+++ b/src/style/reset.styl
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family SFUIDisplay-Regular sans-serif
+  font-family SFUIDisplay-Regular, sans-serif
   font-weight lighter
 }
 
