--- a/src/style/var.styl
+++ b/src/style/var.styl
@@ -10,6 +10,7 @@ $subTitleHeaderHeight = 5vh;
 $mintContentPaddingWidth = 5vw;
 $tabbarFooterHeight = 8.5vh;
 $chatFooterHeight = 8.5vh;
+$buttonFooterHeight = 12vh;
 $logo-height = 25px;
 $body-background = #f4f4f4;
 $nav-item-height = 40px;
