--- a/src/style/animation.styl
+++ b/src/style/animation.styl
@@ -46,3 +46,10 @@
   -webkit-transform: translate3d(-100%, -50%, 0);
   transform: translate3d(-100%, -50%, 0);
 }
+.changeHeight-enter-active {
+  transition: height 1s;
+}
+
+.changeHeight-leave-active {
+  transition: height 1s;
+}
