部分确认页面样式修改

--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -216,3 +216,14 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.flex-center {
+  display flex
+  align-items center
+  justify-content center
+}
+
+.flex-vertical-center {
+  @extend .flex-center
+  flex-direction column
+}
