1、部分确认页面样式修改 2、手机端点击已付款时可以不填写文字，需修改与网页端一致，必须填写才可点击

--- a/src/style/mint-ui.styl
+++ b/src/style/mint-ui.styl
@@ -12,6 +12,9 @@
   text-align: center;
   border-bottom 1px solid #EEEEEE
 }
+/deep/ .mint-header-title {
+  overflow visible
+}
 
 /deep/ .mint-cell-text {
   font-size 1rem
