--- a/src/style/globle.styl
+++ b/src/style/globle.styl
@@ -18,15 +18,21 @@
 }
 
 .formInput {
-  width 72vw;
+  width 88vw;
+}
+
+.submitFormItem {
+  margin-top 2vh
+  outline 1px solid #eee
+  border 0 !important
 }
 
 .formButton {
-  width 72vw;
+  width 88vw;
   text-align center
   height 5vh
   margin 5vh 14vw 0
-  font-size 0.8rem;
+  font-size 1rem;
   color #00A6AE;
   .mint-button-text {
     display flex
@@ -44,7 +50,7 @@
   line-height 1.2
   color: #00A6AE;
   text-align: center;
-  width: 72vw;
+  width: 88vw;
   background: #FFFFFF;
   border-radius: 6px;
   display flex
@@ -80,7 +86,7 @@
   align-items center
   justify-content center
   .mint-button {
-    width 72vw
+    width 88vw
     color #FFFFFF
     background-image: linear-gradient(-134deg, #0BBFD5 0%, #6DD7B2 100%);
     box-shadow: 0 5px 5px 0 rgba(102, 187, 191, 0.14);
@@ -99,7 +105,7 @@
   align-items center
   justify-content center
   .mint-button {
-    width 72vw
+    width 88vw
     color #333333
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.10);
@@ -115,7 +121,7 @@
 }
 
 #captcha {
-  width: 72vw;
+  width: 88vw;
   display: inline-block;
 }
 
