聊天表情的分页

--- a/src/style/animation.styl
+++ b/src/style/animation.styl
@@ -30,6 +30,10 @@
   -webkit-transform: translate3d(0, -100%, 0);
   transform: translate3d(0, -100%, 0);
 }
+.bottom-enter, .bottom-leave-active {
+  -webkit-transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, 100%, 0);
+}
 .slide-top-enter, .slide-top-leave-active {
   -webkit-transform: translate3d(-50%, -100%, 0);
   transform: translate3d(-50%, -100%, 0);
