--- a/src/style/animation.styl
+++ b/src/style/animation.styl
@@ -23,6 +23,18 @@
     opacity: 1;
   }
 }
+
+@keyframes button {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .fade-enter, .fade-leave-active {
   opacity: 0;
 }
